--- a/LogService/pom.xml
+++ b/LogService/pom.xml
@@ -8,10 +8,17 @@
   <name>LogService</name>
   <url>http://maven.apache.org</url>
     <properties>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <maven.compiler.source>1.8</maven.compiler.source>
       <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+
     <dependencies>
+      <dependency>
+        <groupId>com.googlecode.perfect-hashes</groupId>
+        <artifactId>perfect-hashes</artifactId>
+        <version>1.0</version>
+      </dependency>
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
@@ -19,10 +26,32 @@
         <scope>test</scope>
       </dependency>
       <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>3.8.1</version>
+        <scope>test</scope>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/com.sparkjava/spark-core -->
+      <dependency>
         <groupId>com.sparkjava</groupId>
         <artifactId>spark-core</artifactId>
-        <version>2.9.3</version>
+        <version>2.9.2</version>
       </dependency>
+
+      <!-- https://mvnrepository.com/artifact/com.mashape.unirest/unirest-java -->
+      <dependency>
+        <groupId>com.mashape.unirest</groupId>
+        <artifactId>unirest-java</artifactId>
+        <version>1.4.9</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.0</version>
+      </dependency>
+
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
@@ -33,9 +62,19 @@
         <artifactId>slf4j-simple</artifactId>
         <version>1.7.35</version>
       </dependency>
+
     </dependencies>
     <build>
       <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.0</version>
+          <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+          </configuration>
+        </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
@@ -44,7 +83,9 @@
             <execution>
               <id>copy-dependencies</id>
               <phase>package</phase>
-              <goals><goal>copy-dependencies</goal></goals>
+              <goals>
+                <goal>copy-dependencies</goal>
+              </goals>
             </execution>
           </executions>
         </plugin>
